# godot-mpv

./: .gitignore  CMakeLists.txt  README.md
sample/: icon.svg.import  project.godot  root.gd  root.tscn  subtitles.srt
sample/godot-mpv/: mpv.gdextension
src/: MpvPlayer.cpp  MpvPlayer.h  MpvTextureRect.cpp  MpvTextureRect.h  register_types.cpp  register_types.h
